BUILT_SOURCES = search.cpp raypick.cpp intersection.cpp

noinst_PROGRAMS = search raypick tesselate matrixtransform intersection ivcopy

search_SOURCES = search.cpp
raypick_SOURCES = raypick.cpp
tesselate_SOURCES = tesselate.cpp
matrixtransform_SOURCES = matrixtransform.cpp
intersection_SOURCES = intersection.cpp
ivcopy_SOURCES = ivcopy.cpp
